Codigo de seguridad arreglado